<resources>
    <string name="app_name">Calculator</string>
    <string name="mainWindowView">0</string>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="zeroButton">0</string>
    <string name="slashButton">/</string>
    <string name="multButton">*</string>
    <string name="minusButton">-</string>
    <string name="clearButton">CLR</string>
    <string name="plusButton">+</string>
    <string name="equalButton">=</string>

</resources>